# encoding_detection

./: CMakeLists.txt  main.cpp
data/: poem-utf-8.txt  poem-windows-1251.txt  ruslan-and-ludmila-utf-8.txt  ruslan-and-ludmila-windows-1251.txt  war-and-peace-eng.txt  war-and-peace-windows-1251.txt
